--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "@types/node": "^12.12.3",
     "pg": "^7.12.1",
     "typeorm": "^0.2.20"
   },
